@@ -763,6 +763,7 @@
  do_getconst
  do_getenv
  do_geterrmessage
+ do_getfmts
  do_getlocale
  do_gettext
  do_getwd
