@@ -40,6 +40,10 @@
 
       \item In \code{layout()}, the limits on the grid size have been
 	raised (again).
+        
+      \item New functions \code{checkPoFiles()} and \code{checkPoFile()}
+      have been added to the \pkg{tools} package to check for 
+      consistency of format strings in translation files.
     }
   }
 
